--- a/scss/components/footer/_footer.scss
+++ b/scss/components/footer/_footer.scss
@@ -20,7 +20,7 @@
     width: calc(75% - 25px);
     height: 400px;
     float: left;
-    opacity: .4;
+    opacity: .6;
     border: 1px solid $color-neutral-4;
     margin-right: 25px;
 
@@ -130,7 +130,7 @@
         padding-bottom: 45px;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         padding: 0;
         width: 100%;
         padding-bottom: 15px;
@@ -160,14 +160,14 @@
         left: -45px;
         background: $color-background;
 
-        @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+        @media screen and (max-width: $breakpoint-small) {
           display: none;
         }
       }
     }
 
     p {
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         font-size: 14px;
       }
     }
@@ -223,7 +223,7 @@
         margin-top: 2px;
         float: left;
 
-        @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+        @media screen and (max-width: $breakpoint-small) {
           float: none;
           width: 100%;
           display: block;
@@ -282,14 +282,12 @@
   height: 50px;
   border-radius: 50%;
   background: $color-highlight;
-  bottom: 1em;
+  bottom: -100%;
   right: 1em;
-  transform: scale(0);
   color: $color-background;
   box-shadow: 0px 2px 5px rgba($color-neutral-darkest,.25);
-  z-index: 10000;
 
-  @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+  @media screen and (max-width: $breakpoint-small) {
     width: 35px;
     height: 35px;
     font-size: 18px;
@@ -301,7 +299,7 @@
   }
 
   &.visible {
-    transform: scale(1);
+    bottom: 1em;
   }
 
   &::before {
