--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -6,18 +6,17 @@
   left: 0;
   width: 100%;
   padding: 97px 0;
-  z-index: 1000;
+  z-index: 9;
   transition: left .3s ease;
 
   @media screen and (max-width: $breakpoint-medium-large) {
     padding: 30px 0;
   }
 
-  @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+  @media screen and (max-width: $breakpoint-small) {
     padding: 10px 0;
     position: fixed;
   }
-
 
   .content-wrap {
     // position: relative;
@@ -48,7 +47,7 @@
     animation: slideFromTop .3s ease forwards;
     box-shadow: 0px 2px 5px rgba($color-neutral-darkest,.25);
 
-    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    @media screen and (max-width: $breakpoint-small) {
       animation: none;
       padding: 10px 0;
     }
@@ -57,7 +56,7 @@
   &.show-nav {
     left: -50%;
 
-    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    @media screen and (max-width: $breakpoint-small) {
       left: -70%;
     }
   }
