--- a/scss/imports/_vars.scss
+++ b/scss/imports/_vars.scss
@@ -34,7 +34,7 @@ $color-spec-accessories:     $color-neutral-3;
 
 // Fonts
 
-$font-family:                'Avenir','Lato',-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+$font-family:                'Avenir','Avenir LT Std','Lato',-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 
 // Font sizes
 
