--- a/scss/components/header/_logo-wrap.scss
+++ b/scss/components/header/_logo-wrap.scss
@@ -24,7 +24,7 @@
     margin: 0 auto;
   }
 
-  @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+  @media screen and (max-width: $breakpoint-small) {
     width: 135px;
     height: 15px;
   }
