--- a/scss/components/header/_off-canvas-nav.scss
+++ b/scss/components/header/_off-canvas-nav.scss
@@ -69,7 +69,7 @@
   transition: $transition;
   z-index: 9;
 
-  @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+  @media screen and (max-width: $breakpoint-small) {
     width: 70%;
     right: -70%;
   }
@@ -93,7 +93,7 @@
         font-size: 16px;
         border-bottom: 0;
 
-        @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+        @media screen and (max-width: $breakpoint-small) {
           font-size: 14px;
           padding: 12px 18px;
         }
@@ -116,7 +116,7 @@
       width: 100%;
       display: block;
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         font-size: 14px;
         padding: 12px 18px;
       }
@@ -128,7 +128,7 @@
     padding: 30px 10px 30px 24px;
     background: darken($color-neutral-5,2);
 
-    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    @media screen and (max-width: $breakpoint-small) {
       padding: 4px 3px 13px 18px;
     }
 
@@ -142,7 +142,7 @@
     max-width: none;
     font-size: 14px;
 
-    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    @media screen and (max-width: $breakpoint-small) {
       font-size: 12px;
     }
   }
