--- a/scss/components/wordpress/_search.scss
+++ b/scss/components/wordpress/_search.scss
@@ -10,15 +10,6 @@
     font-style: normal;
     letter-spacing: .125em;
     margin: 0;
-    word-wrap: break-word;
-
-    @media screen and (max-width: $breakpoint-medium) {
-      font-size: 21px;
-    }
-
-    @media screen and (max-width: $breakpoint-small) {
-      font-size: 18px;
-    }
   }
 
   h3 {
@@ -27,10 +18,6 @@
     font-weight: 700;
     letter-spacing: .125em;
     margin-bottom: .5em;
-
-    @media screen and (max-width: $breakpoint-medium) {
-      font-size: 16px;
-    }
   }
 
   .search-results {
@@ -40,18 +27,16 @@
     width: 100%;
   }
 
-  // .page,
-  // .post {
-  //   width: 100%;
-  //   margin-bottom: 1em;
-  //   background: $color-neutral-brightest;
-  //   padding: 1.5em;
-  //   box-shadow: 0px 2px 5px rgba(0,0,0,.25);
-  // }
-
-  .product,
   .page,
   .post {
+    width: 100%;
+    margin-bottom: 1em;
+    background: $color-neutral-brightest;
+    padding: 1.5em;
+    box-shadow: 0px 2px 5px rgba(0,0,0,.25);
+  }
+
+  .product {
     width: calc((100% / 4) - ((3 * 15px) / 4));
     margin-right: 15px;
     margin-bottom: 20px;
@@ -66,7 +51,7 @@
       width: calc((100% / 2) - ((1 * 15px) / 2));
     }
 
-    @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+    @media screen and (max-width: $breakpoint-small) {
       width: 100%;
       margin-right: 0;
     }
@@ -85,7 +70,7 @@
         margin-right: 0;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         margin-right: 0;
       }
     }
@@ -99,7 +84,7 @@
         margin-right: 15px;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         margin-right: 0;
       }
     }
@@ -115,7 +100,7 @@
         margin-right: 0;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         margin-right: 0;
       }
     }
@@ -130,7 +115,7 @@
         margin-right: 0;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         margin-right: 0;
       }
     }
@@ -140,7 +125,7 @@
         margin-right: 0;
       }
 
-      @media screen and (max-width: $breakpoint-small), (max-width: $breakpoint-medium-large) and (orientation: landscape) {
+      @media screen and (max-width: $breakpoint-small) {
         margin-right: 0;
       }
     }
